# rupta_rustui_workspace

./: .gitignore  .gitmodules  run_rcpta.sh  run_rcpta_all_entries.sh  run_rcpta_vehicle_hierarchy.sh  rust-toolchain.toml
playground/: Cargo.toml  README.md  analyze.sh  debug_analysis.sh  nohup.out  rust-toolchain.toml
playground/analysis_results/example1/: call_graph.dot  pts.txt
playground/analysis_results/simple_assign/: simple_assign_cg.dot  simple_assign_mir.txt  simple_assign_pts.txt
playground/analysis_results/simple_assign2/: simple_assign2_mir.txt  simple_assign2_pts.txt
playground/analysis_results/simple_load_store/: call_graph.dot  class_cg.txt  class_ptr_system.txt  class_type_system.txt  simple_load_store_mir.txt  simple_load_store_pts.txt
playground/analysis_results/simple_method_call/: call_graph.dot  class_cg.txt  class_ptr_system.txt  class_type_system.txt  simple_method_call_mir.txt  simple_method_call_pts.txt
playground/analysis_results/simple_new/: simple_new_cg.dot  simple_new_mir.txt  simple_new_pts.txt
playground/analysis_results/simple_new2/: simple_new2_cg.dot  simple_new2_pts.txt
playground/expanded/: cs_test_example_expanded.rs  entry_full_rcpta_demo_expanded.rs  example1_expanded.rs  simple_cast_expanded.rs  simple_load_store_expanded.rs  simple_method_call_expanded.rs  simple_new_expanded.rs
playground/scripts/: analyze.sh  expand.sh  workflow.sh
rustdsl/: Cargo.toml  rust-toolchain.toml
rustdsl/classes/: Cargo.toml
rustdsl/classes/src/: cell.rs  class.rs  eq_hash.rs  fmt.rs  get_set.rs  lib.rs  object.rs  ptr.rs  vtable.rs
rustdsl/classes/src/macros/: mod.rs
rustdsl/classes/tests/animal_hierarchy/: dog.rs  main.rs  mixins.rs
rustdsl/classes/tests/animal_hierarchy/bird/: eagle.rs  mod.rs  ostrich.rs
rustdsl/classes/tests/animal_hierarchy/fish/: mod.rs
rustdsl/classes/tests/gallery_page/: expanded.rs  gallery_page.dart  macros.rs  main.rs
rustdsl/classes/tests/mixin/: expanded.rs  macros.rs  main.rs  mixin.dart
rustdsl/classes/tests/rcpta_full_hierarchy/: entity.rs  holder.rs  interfaces.rs  main.rs  mixins.rs  special_item.rs
rustdsl/classes/tests/shape_hierarchy/: main.rs  multilevel.rs  polymorphism.rs  shape.rs  triangle.rs
rustdsl/classes/tests/shape_hierarchy/circle/: colored_circle.rs  ellipse.rs  mod.rs
rustdsl/classes/tests/shape_hierarchy/rectangle/: mod.rs  rounded_rectangle.rs  square.rs
rustdsl/classes/tests/vehicle_hierarchy/: bicycle.rs  car.rs  electric_car.rs  interfaces.rs  main.rs  mixins.rs  motor_vehicle.rs  motorcycle.rs  sports_car.rs  truck.rs  vehicle.rs
rustdsl/classes_macros/: Cargo.toml
rustdsl/classes_macros/src/: expand.rs  lib.rs  syntax.rs
rustdsl/classes_macros/src/expand/: function_helper.rs
rustdsl/classes_macros/tests/: compile_test.rs
rustdsl/classes_macros/tests/compile/check_error/: ambiguious_override.rs  ambiguious_override.stderr  duplicated_super_and_extends.rs  duplicated_super_and_extends.stderr  field.rs  field.stderr  invalid_override.rs  invalid_override.stderr  mixin_field_no_init.rs  mixin_field_no_init.stderr  unsupported_kw_fn.rs  unsupported_kw_fn.stderr
rustdsl/classes_macros/tests/compile/parse_error/: ctor_super_no_expr.rs  ctor_super_no_expr.stderr  expect_block.rs  expect_field.rs  expect_param.rs  missing_self_receiver.rs  redundant_visibility_before_struct.rs  unsupported_receivers.rs
rustdsl/classes_macros/tests/compile/wrong_override/: ancestor_lack_interface.rs  lack_interface.rs  lack_override.rs  method_not_in_parent_but_in_ancestor.rs
rustdsl/classes_macros/tests/expand/: gallery_page.rs  main.rs  mixin.rs  no_super.rs
rustdsl/classes_macros/tests/fixed/run/: class_name_is_captal_a.rs  mod.rs
rustdsl/classes_macros/tests/fixme/correctness/: inheritance_and_interface_precedence.rs  inheritance_and_interface_precedence.stderr  mixin_mutual_withs.rs  mixin_mutual_withs.stderr
rustdsl/classes_macros/tests/fixme/grammar/: inheritance_defined_in_functions.rs  (+1 more)
rustdsl/classes_macros/tests/run/: ctor.rs  function_helper.rs  main.rs  test_utils.rs
rustdsl/classes_macros/tests/vtable_layout/: diamond_inheritance.rs  main.rs  mixin.rs  overrides.rs
(+322 files in other folders)
