[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
classes = { path = "../rustdsl/classes" }
classes_macros = { path = "../rustdsl/classes_macros" }

[[bin]]
name = "simple_new"
path = "src/bin/simple_new.rs"

[[bin]]
name = "simple_new2"
path = "src/bin/simple_new2.rs"

