[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
classes = { path = "../rustdsl/classes" }
classes_macros = { path = "../rustdsl/classes_macros" }

[[bin]]
name = "simple_new"
path = "src/bin/simple_new.rs"

[[bin]]
name = "simple_new2"
path = "src/bin/simple_new2.rs"

[[bin]]
name = "simple_assign"
path = "src/bin/simple_assign.rs"

[[bin]]
name = "simple_assign2"
path = "src/bin/simple_assign2.rs"

[[bin]]
name = "simple_load_store"
path = "src/bin/simple_load_store.rs"

[[bin]]
name = "simple_method_call"
path = "src/bin/simple_method_call.rs"

[[bin]]
name = "example1"
path = "src/bin/example1.rs"

[[bin]]
name = "simple_load_store_expanded"
path = "expanded/simple_load_store_expanded.rs"

[[bin]]
name = "simple_method_call_expanded"
path = "expanded/simple_method_call_expanded.rs"