[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
classes = { path = "../rustdsl/classes" }
classes_macros = { path = "../rustdsl/classes_macros" }

[[bin]]
name = "cs_test_example"
path = "src/bin/cs_test_example.rs"

[[bin]]
name = "simple_cast"
path = "src/bin/simple_cast.rs"

[[bin]]
name = "simple_new"
path = "src/bin/simple_new.rs"

[[bin]]
name = "simple_new2"
path = "src/bin/simple_new2.rs"

[[bin]]
name = "simple_assign"
path = "src/bin/simple_assign.rs"

[[bin]]
name = "simple_assign2"
path = "src/bin/simple_assign2.rs"

[[bin]]
name = "simple_load_store"
path = "src/bin/simple_load_store.rs"

[[bin]]
name = "simple_method_call"
path = "src/bin/simple_method_call.rs"

[[bin]]
name = "example1"
path = "src/bin/example1.rs"

[[bin]]
name = "simple_load_store_expanded"
path = "expanded/simple_load_store_expanded.rs"

[[bin]]
name = "simple_method_call_expanded"
path = "expanded/simple_method_call_expanded.rs"

[[bin]]
name = "simple_cast_expanded"
path = "expanded/simple_cast_expanded.rs"

[[bin]]
name = "main"
path = "src/bin/animal_hierarchy/main.rs"

[[bin]]
name = "entry_full_rcpta_demo"
path = "src/bin/rcpta_full_hierarchy/entry_full_rcpta_demo.rs"

[[bin]]
name = "entry_full_rcpta_demo_expanded"
path = "expanded/entry_full_rcpta_demo_expanded.rs"
