cargo-features = ["edition2024"]

[package]
name = "classes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classes_macros.workspace = true
rpds.workspace = true
archery.workspace = true
dyn-hash.workspace = true
bitflags.workspace = true
