cargo-features = ["edition2024"]

[package]
name = "classes_macros"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"
indexmap = "2.9"
bitflags.workspace = true
convert_case = "0.8.0"

[dev-dependencies]
pretty_assertions = "1.4"
classes.workspace = true
trybuild = "1.0.104"

[features]
